<resources>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="new_file">New source file</string>
    <string name="default_">System</string>
    <string name="language">Language</string>
    <string name="run">Run</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">CLose navigation</string>
    <string name="close">Close</string>
    <string name="rate">Rate app</string>
    <string name="more_app">More app</string>
    <string name="compile_error">Compile error</string>
    <string name="setting">Setting</string>
    <string name="document">See document</string>
    <string name="code_sample">Code sample</string>
    <string name="title_activity_code_sample">Code Sample</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="save_as">Save as</string>
    <string name="enter_new_file_name">Enter new file name</string>
    <string name="path">"Path: "</string>
    <string name="extension">Extension:</string>
    <string name="readable">"Readable: "</string>
    <string name="writeable">"Writable: "</string>
    <string name="remove_file_msg">"Do you want to delete file "</string>
    <string name="delete_file">Delete file</string>
    <string name="deleted">Deleted</string>
    <string name="failed">Failed</string>
    <string name="compile_ok">Compile success</string>
    <string name="code_editor">Code editor</string>
    <string name="word_wrap">Wrap content</string>
    <string name="font_z">Font size</string>
    <string name="font">Font</string>
    <string name="user_interface">User interface</string>
    <string name="show_line">Show line number</string>
    <string name="find">Find</string>
    <string name="find_replace">Find and replace</string>
    <string name="tool">Tool</string>
    <string name="find_what">Find what?</string>
    <string name="replace_with">Replace with</string>
    <string name="replace">Replace</string>
    <string name="match_case">Match case</string>
    <string name="regex">Regex</string>
    <string name="word_only">Word only</string>
    <string name="auto_save">Auto save</string>
    <string name="goto_line">Go to line</string>
    <string name="format_code">Format code</string>
    <string name="information">Information</string>
    <string name="report_bug">Report bug</string>
    <string name="check_update">Check update</string>
    <string name="email">Email</string>
    <string name="describe_causes_an_error">Describe causes an error</string>
    <string name="bug">Bug</string>
    <string name="word_wrap_desc">Automatic screen down the line when overflow</string>
    <string name="show_line_desc">Display the line numbers to the left of the code editor</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="hide_status_bar_desc">Hide the status bar in every screen of the app, include console. Restart app if need change.</string>
    <string name="show_suggest_popup">Hint popup</string>
    <string name="show_hint_desc">Show suggestions while typing</string>
    <string name="compile">Compile</string>
    <string name="file">File</string>
    <string name="change_lang_msg">Restart the application to change the language.</string>
    <string name="data">Data</string>
    <string name="show_key_board">Show key board</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="paste">Paste</string>
    <string name="copy_all">Copy all</string>
    <string name="pascal_for_android">Pascal for Android</string>
    <string name="exit">Exit</string>
    <string name="exit_mgs">Do you want to exit application?</string>
    <string name="setting_editor">Setting editor</string>
    <string name="cloud_database">Cloud database</string>
    <string name="pas_file">Pas file (*.pas)</string>
    <string name="inp_file">Inp file (*.inp)</string>
    <string name="theme">Code style</string>
    <string name="select">Select</string>
    <string name="folder">Folder</string>
    <string name="home">home</string>
    <string name="new_folder">Create new folder</string>
    <string name="enter_new_folder_name">Enter name of folder</string>
    <string name="change_key_board">Change keyboard</string>
    <string name="cant_undo">Can not undo</string>
    <string name="cant_redo">Can not redo</string>
    <string name="back_to_undo">Press back to undo</string>
    <string name="more_feature">Open drawer</string>
    <string name="cant_close_file">Can not close file</string>
    <string name="closed">Closed</string>
    <string name="complete">Complete</string>
    <string name="view_console">View console</string>
    <string name="resume_program">Resume program</string>
    <string name="help_me_translate">Help me translate app</string>
    <string name="your_name">Your name</string>
    <string name="send_to_me">Send to dev</string>
    <string name="rerun">Rerun current program</string>
    <string name="translate">Translate</string>
    <string name="license">License</string>
    <string name="console_screen">Console</string>
    <string name="background_console">Background console</string>
    <string name="text_color_console">Text color console</string>
    <string name="frame_rate">Frame rate</string>
    <string name="max_buffer">Max buffer length</string>
    <string name="write_code_here">Write code here…</string>
    <string name="can_not_save_file">Can not save file!</string>
    <string name="saved">Saved</string>
    <string name="file_exist">File is exist, please enter value name!</string>
    <string name="send_mail">Send mail…</string>
    <string name="no_mail_clients">There are no email clients installed.</string>
    <string name="your_language">Your language</string>
    <string name="other">Other</string>
    <string name="logo">Logo</string>
    <string name="auto_compile_summary">Automatically compile while typing. The performance of the application will be decrease if using this feature, however, which will help us to report the error faster.</string>
    <string name="auto_compile">Auto compile</string>
    <string name="keyboard_shortcut">Key board shortcut</string>
    <string name="program_structure">Show program structure</string>
    <string name="show_symbol">List symbols</string>
    <string name="show_symbol_decs">Show list symbol below the editor.</string>
    <string name="debug">Debug program</string>
    <string name="add_watch">Add watch</string>
    <string name="var_name">Variable name</string>
    <string name="program_stopped">Program is stopped</string>
    <string name="no_document">No document</string>
    <string name="max_page_desc">Number of maximum page display on the screen</string>
    <string name="max_page">Max page editor</string>
    <string name="implicitly">implicitly</string>
    <string name="enter_key_word">Enter your keyword…</string>
    <string name="blog">Blog of Pascal N-IDE</string>
    <string name="title_activity_zxing">ZxingActivity</string>
    <string name="turn_on_flashlight">Turn on flashlight</string>
    <string name="turn_off_flashlight">Turn off flashlight</string>
    <string name="open_file">Open file</string>
    <string name="insert_url_media">Insert url media</string>
    <string name="max_history_edit">Max history edit</string>
    <string name="max_history_edit_desc">The maximum number of steps can be undo redo</string>
    <string name="see_in_github">See project in Github https://github.com/tranleduy2000/pascalnide</string>
    <string name="stack_size_desc">Maximum stack size when running the program. On some devices, this parameter has no effect. The default is 40000. Minimum is 5000</string>
    <string name="stack_size">Stack size</string>
    <string name="copied">Copied</string>
    <string name="theme_font">Code theme and font</string>
    <string name="do_you_want_to_create_your_theme">Do you want to create your theme?</string>
    <string name="get_pro_version">Get Pro Version</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="create_shortcut_msg">Select file to create shortcut</string>
    <string name="shortcut_created">Shortcut created</string>
    <string name="sort_date">Sort by date…</string>
    <string name="sort_name">Sort by name…</string>
    <string name="sort_size">Sort by size…</string>
    <string name="content">Content</string>
    <string name="see_in_github_2">See in Github</string>
    <string name="insert_color">Insert color</string>
    <string name="permission_denied_storage">Permission denied to read your External storage</string>
    <string name="inserted_color">Inserted color</string>
    <string name="unit_file">Unit pascal (*.pas)</string>
    <string name="what_expect">What do you expect?</string>
    <string name="auto_fix">Auto fix</string>
    <string name="declare_variable">Declare variable</string>
    <string name="declare_function">Declare function</string>
    <string name="declare_constant">Declare constant</string>
    <string name="can_not_exec_unit">Can not executing unit</string>
    <string name="insert">Insert</string>
    <string name="select_mode">Select mode</string>
    <string name="select_token">Select token</string>
    <string name="enable_ime_keyboard">Enable IME keyboard</string>
    <string name="frames">Frames</string>
    <string name="variables">Variables</string>
    <string name="call_stack">Call stack</string>
    <string name="step_info">Step info</string>
    <string name="step_over">Step over</string>
    <string name="notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="console_screen_">Console screen</string>
    <string name="keyboard">Keyboard</string>
    <string name="system_interface">System interface</string>
    <string name="maxline_console_desc">The maximum number of lines that the console will store, the larger the number of lines will need more memory.</string>
    <string name="text_color">Text Color</string>
    <string name="default_text_color">Default text color</string>
    <string name="def_bg_color">Default background color</string>
    <string name="bg_color">Background Color</string>
    <string name="draw_screen_faster">Draw screen faster</string>
    <string name="ctrl_key">Ctrl Key</string>
    <string name="compiler">Compiler</string>
    <string name="ime_desc">Allows your keyboard to show hints.</string>
    <string name="tab_width">Tab width (space)</string>
    <string name="anti_alias_summary">Smooths out jagged graphics</string>
    <string name="anti_alias">Anti-alias</string>
    <string name="hardware_acceleration">Hardware acceleration</string>
    <string name="console_font_size">Console font size</string>
    <string name="license_invalid">Thanks for purchasing the donation app! Unfortunately license check failed. Please try again later. If it\'s still not working, please contact me. You need internet access!</string>
    <string name="pirated">Seems like the donation app wasn\'t purchased through Play Store! If you pirated it, then shame on you!</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">You can custom code theme, more font, change console font… with donate version\n.
        Because this app is open source you can easily build it yourself and remove this check.
        But I hope you support developers anyway. Thanks for using Pascal NIDE!
        Once you bought the donation app you have to restart Pascal NIDE in order to enable all features.</string>
    <string name="donate_nope">I won\'t fall for this scam!</string>
    <string name="donate_yes">I love this app. Must donate!</string>
    <string name="code">Code</string>
</resources>