<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/file">
        <menu>
            <item
                android:id="@+id/action_new_file"
                android:icon="@drawable/ic_fiber_new_white_24dp"
                android:title="@string/new_file"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_save_white_24dp"
                android:title="@string/save"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_save_as"
                android:icon="@drawable/ic_save_white_24dp"
                android:title="@string/save_as"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_auto_save"
                android:checkable="true"
                android:checked="true"
                android:enabled="false"
                android:icon="@drawable/ic_save_white_24dp"
                android:title="@string/auto_save"
                app:showAsAction="ifRoom" />

            <!--<item-->
                <!--android:id="@+id/action_open_file"-->
                <!--android:enabled="true"-->
                <!--android:icon="@drawable/ic_create_new_folder_white_24dp"-->
                <!--android:title="@string/open_file"-->
                <!--app:showAsAction="ifRoom" />-->
        </menu>
    </item>

    <item android:title="@string/edit">
        <menu>
            <item
                android:id="@+id/action_undo"
                android:icon="@drawable/ic_undo_white_24dp"
                android:title="@string/undo"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_redo"
                android:icon="@drawable/ic_redo_white_24dp"
                android:title="@string/redo"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_paste"
                android:icon="@drawable/ic_content_paste_white_24dp"
                android:title="@string/paste" />
            <item
                android:id="@+id/action_copy_all"
                android:icon="@drawable/ic_content_copy_white_24dp"
                android:title="@string/copy_all"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item android:title="@string/tool">
        <menu>

            <item
                android:id="@+id/action_find"
                android:icon="@drawable/ic_search_white_24dp"
                android:title="@string/find"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_find_and_replace"
                android:icon="@drawable/ic_find_replace_white_24dp"
                android:title="@string/find_replace"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_goto_line"
                android:icon="@drawable/ic_format_list_numbered_white_24dp"
                android:title="@string/goto_line"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_format"
                android:icon="@drawable/ic_format_indent_increase_white_24dp"
                android:title="@string/format_code" />
            <item
                android:id="@+id/action_select_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/theme" />

            <item
                android:id="@+id/action_setting"
                android:enabled="true"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/setting_editor"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item android:title="@string/data">
        <menu>

            <item
                android:id="@+id/action_cloud"
                android:enabled="false"
                android:icon="@drawable/ic_cloud_white_24dp"
                android:title="@string/cloud_database">

            </item>
            <item
                android:id="@+id/action_doc"
                android:enabled="false"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/document"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_code_sample"
                android:icon="@drawable/ic_code_white_24dp"
                android:title="@string/code_sample"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item android:title="@string/information">

        <menu>


            <item
                android:id="@+id/action_report_bug"
                android:icon="@drawable/ic_bug_report_white_24dp"
                android:title="@string/report_bug">

            </item>
            <item
                android:id="@+id/action_check_update"
                android:icon="@drawable/ic_system_update_white_24dp"
                android:title="@string/check_update" />

            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_stars_white_18dp"
                android:title="@string/rate"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_more"
                android:icon="@drawable/ic_play_store"
                android:title="@string/more_app"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>