<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/code">
        <menu>
            <item
                android:id="@+id/action_compile"
                android:icon="@drawable/ic_check_circle_white_24dp"
                android:title="@string/compile"
                app:showAsAction="always" />
            <item
                android:id="@+id/nav_run"
                android:icon="@drawable/ic_play_arrow_white_24dp"
                android:title="@string/run"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_debug"
                android:icon="@drawable/ic_bug_report_white_24dp"
                android:title="@string/debug"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_code_sample"
                android:icon="@drawable/ic_code_white_24dp"
                android:title="@string/code_sample"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_program_structure"
                android:icon="@drawable/ic_format_list_bulleted_white_24dp"
                android:title="@string/program_structure"
                android:visible="false"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_build_white_24dp"
        android:title="@string/tool"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_find"
                android:icon="@drawable/ic_search_white_24dp"
                android:title="@string/find" />

            <item
                android:id="@+id/action_find_and_replace"
                android:icon="@drawable/ic_find_replace_white_24dp"
                android:title="@string/find_replace" />
            <item
                android:id="@+id/action_goto_line"
                android:icon="@drawable/ic_format_list_numbered_white_24dp"
                android:title="@string/goto_line" />

            <item
                android:id="@+id/action_format"
                android:icon="@drawable/ic_format_indent_increase_white_24dp"
                android:title="@string/format_code" />

            <item
                android:id="@+id/action_insert_media_url"
                android:icon="@drawable/ic_perm_media_white_24dp"
                android:title="@string/insert_url_media"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_insert_color"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/insert_color"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item android:title="@string/code_editor">
        <menu>
            <item
                android:id="@+id/action_select_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/theme_font" />

            <item
                android:id="@+id/action_setting"
                android:enabled="true"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/setting" />
        </menu>

    </item>
    <item android:title="@string/data">
        <menu>

            <item
                android:id="@+id/action_translate"
                android:enabled="true"
                android:icon="@drawable/ic_language_white_24dp"
                android:title="@string/help_me_translate"
                app:showAsAction="ifRoom" />

            <item
                android:enabled="false"
                android:icon="@drawable/ic_cloud_white_24dp"
                android:title="@string/cloud_database"
                android:visible="false">

            </item>
            <item

                android:id="@+id/action_got_to_blog"
                android:enabled="true"
                android:icon="@drawable/ic_web_white_24dp"
                android:title="@string/blog"
                android:visible="false">

            </item>
            <item
                android:id="@+id/action_doc"
                android:enabled="false"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/document"
                android:visible="false"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/action_donate"
                android:icon="@drawable/ic_donate_white"
                android:title="@string/donate"
                android:visible="false" />
            <item
                android:id="@+id/action_report_bug"
                android:icon="@drawable/ic_bug_report_white_24dp"
                android:title="@string/report_bug" />

            <item
                android:id="@+id/action_info"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/information" />

            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_stars_white_18dp"
                android:title="@string/rate"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_more_app"
                android:icon="@drawable/ic_play_store"
                android:title="@string/more_app"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>