<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/code_editor">

        <ListPreference
            android:defaultValue="13"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"

            android:key="@string/key_pref_font_size"
            android:title="@string/font_z" />

        <ListPreference
            android:defaultValue="@string/font.monospace"
            android:entries="@array/fonts_arr"
            android:entryValues="@array/fonts_arr"
            android:key="@string/key_pref_font"
            android:title="@string/font" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="uses_full_screen"
            android:summary="@string/hide_status_bar_desc"
            android:title="@string/hide_status_bar" />

    </PreferenceCategory>

</PreferenceScreen>