<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_what" />

    <EditText
        android:id="@+id/txt_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <CheckBox
        android:id="@+id/ckb_match_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_case" />

    <CheckBox
        android:id="@+id/ckb_regex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regex" />

    <CheckBox
        android:id="@+id/ckb_word_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_only" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_replace"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>