<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_next_line"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/resume_program"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_show_soft"
        android:icon="@drawable/ic_keyboard_white_24dp"
        android:title="@string/show_key_board"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_change_keyboard"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/change_key_board"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/action_rerun"
        android:icon="@drawable/ic_replay_white_24dp"
        android:title="@string/rerun"
        app:showAsAction="ifRoom" />
</menu>